--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .version { background: #e6f2ff; margin: 20px 0; padding: 20px; border-radius: 10px; }
     .scenarios li { margin-bottom: 10px; }
     footer { background-color: #003366; color: white; text-align: center; padding: 20px; }
-    .btn { background-color: #007acc; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; }
+    .btn { background-color: #007acc; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; text-decoration: none; }
     .btn:hover { background-color: #005999; }
   </style>
 </head>
@@ -26,6 +26,7 @@
     <a href="#wersje">Wersje</a>
     <a href="#funkcje">Funkcje</a>
     <a href="#scenariusze">Scenariusze</a>
+    <a href="#kontakt">Kontakt</a>
   </nav>
 </header>
 
@@ -79,7 +80,20 @@
 </section>
 
 <section style="text-align:center">
-  <button class="btn">Skontaktuj się z nami</button>
+  <a href="#kontakt" class="btn">Skontaktuj się z nami</a>
+</section>
+
+<section id="kontakt">
+  <h2>📞 Kontakt</h2>
+  <p><strong>Pani Hanna Janik, Pola Siwiec</strong><br>
+  ul. Kawowa 127<br>
+  30-000 Kraków</p>
+
+  <p><strong>Telefon:</strong> +48 564 788 747<br>
+  <strong>E-mail:</strong> guardiohealth@gmail.com</p>
+
+  <p><strong>O nas:</strong><br>
+  Quardio Sp. z o.o. jest przedsiębiorstwem założonym przez zespół pasjonatów technologii i zdrowia, którzy łączą doświadczenie w programowaniu, medycynie i zarządzaniu projektami. Właścicielami są Pola Siwiec, Hanna Janik, Emilia Grzmil, Oliwia Gołdyn, Bartłomiej Bednarz oraz Kacper Gucwa, którzy pełnią również funkcje zarządcze.</p>
 </section>
 
 <footer>
